# debito_automatico

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
debito_automatico/: errors.py  registro.py  tipos.py
debito_automatico/layout/: __init__.py
debito_automatico/layout/versao_06/specs/: registro_a_header.json  registro_b_cadastro.json  registro_c_ocorrencias.json  registro_d_id_cliente.json  registro_e_debito.json  registro_f_retorno.json  registro_h_ocorrencias.json  registro_i_incentivo.json  registro_j_confirmacao.json  registro_k.json  registro_l_cronograma.json  registro_t_total_debitados.json  registro_x_agencias.json  registro_z_trailler.json
tests/: consts.py  test_arquivos_versao_06.py  test_registro.py
tests/arquivos/: bancoob_remessa_v6.txt  bancoob_retorno_v6.cnv
